# MedievalDeck

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  art.txt  config.py  generate_assets.py  main.py  prompts.yaml  pyproject.toml  requirements.txt  roadmap_features_detalhado.txt  roadmap_mvp_medieval_deck.txt  test_sprint1.py
.claude/: settings.local.json
.github/workflows/: ci.yml
cards/: __init__.py
gen_assets/: __init__.py  art_direction.py  generate_backgrounds.py  rtx_optimizer.py
screens/: __init__.py  gameplay.py  menu.py  selection.py
scripts/: gen_all_assets.py  gen_assets.py
src/: main.py  settings.py
src/engine/: __init__.py  animation.py  particles.py  resources.py
src/game/: cards.py  combat.py  deck.py  enemy.py
src/ui/: __init__.py  character_select_screen.py  combat_screen.py  menu_screen.py  result_screen.py  screen_base.py  screen_manager.py
tests/: __init__.py  test_enhanced_selection.py  test_sprint00.py  test_sprint01.py  test_sprint02.py  test_sprint03.py  test_sprint2.py  test_sprint3.py  test_sprint4.py
utils/: __init__.py  buttons.py
